--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@vitejs/plugin-basic-ssl": "^1.0.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
+    "@types/node": "^18.14.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
