--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
+    "ky": "^0.33.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.2",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^18.14.6",
