--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.8.2",
     "zustand": "^4.3.6"
   },
@@ -24,6 +24,7 @@
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-helmet": "^6.1.6",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
