--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
+    "graphql": "^16.6.0",
     "ky": "^0.33.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
