--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -2,7 +2,7 @@
   "root": true,
   "env": {
     "browser": true,
-    "es2021": true
+    "esnext": true
   },
   "extends": [
     "eslint:recommended",
