--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "compile": "DOTENV_CONFIG_PATH=../env/.env graphql-codegen -r dotenv/config",
+    "watch": "DOTENV_CONFIG_PATH=../env/.env graphql-codegen -r dotenv/config -w"
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
@@ -14,7 +16,6 @@
     "@emotion/styled": "^11.10.6",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "graphql": "^16.6.0",
-    "ky": "^0.33.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,12 +24,16 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/client-preset": "^2.1.1",
     "@types/node": "^18.14.6",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "client": "link:@types/apollo/client",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
