--- a/app/package.json
+++ b/app/package.json
@@ -17,12 +17,14 @@
     "@emotion/styled": "^11.10.6",
     "@react-oauth/google": "^0.8.0",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
+    "facepaint": "^1.2.1",
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.2",
     "zustand": "^4.3.6"
   },
@@ -30,10 +32,12 @@
     "@babel/core": "^7.21.0",
     "@graphql-codegen/cli": "^3.2.2",
     "@graphql-codegen/client-preset": "^2.1.1",
+    "@types/facepaint": "^1.2.2",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-responsive": "^8.0.5",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
