--- a/app/package.json
+++ b/app/package.json
@@ -17,10 +17,12 @@
     "@emotion/styled": "^11.10.6",
     "@react-oauth/google": "^0.8.0",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
+    "apexcharts": "^3.37.2",
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-responsive": "^9.0.2",
