--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.2",
     "zustand": "^4.3.6"
