--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "apexcharts": "^3.37.2",
     "graphql": "^16.6.0",
+    "jotai": "^2.0.3",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
@@ -27,14 +28,12 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.8.2",
-    "zustand": "^4.3.6"
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@graphql-codegen/cli": "^3.2.2",
     "@graphql-codegen/client-preset": "^2.1.1",
-    "@types/facepaint": "^1.2.2",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
