feat: :sparkles: install graphql-codegen  & graphql.ts 갱신

--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@react-oauth/google": "^0.8.0",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "apexcharts": "^3.37.2",
@@ -43,6 +44,7 @@
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
     "client": "link:@types/apollo/client",
+    "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
