feat: :sparkles: home 카드안쪽으로 데이터전부 띄우는작업
아직 chart로 연결시키는 작업과 데이터 가공하는 작업은 하지않음 공유를 위해 먼저 올림

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -15,9 +15,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "@emotion/react"    
+    "jsxImportSource": "@emotion/react"
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*",
+    "src/components/elements/charts/Home/MonthlyAccessTimeRank.tsxhlyExpIncrementRank.tsx"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }],
   "extends": "./tsconfig.paths.json"
 }
