--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,10 +17,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react"
   },
-  "include": [
-    "src/**/*",
-    "src/components/elements/charts/Home/MonthlyAccessTimeRank.tsxhlyExpIncrementRank.tsx"
-  ],
+  "include": ["src/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }],
   "extends": "./tsconfig.paths.json"
 }
