--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.3",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
