--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.3",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.2"
