--- a/.github/workflows/aws-s3-ci.yml
+++ b/.github/workflows/aws-s3-ci.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+          token: ${{ secrets.READ_PRIVATE_SUBMODULE_TOKEN }}
 
       - name: Build using Docker Compose
         uses: isbang/compose-action@v1.4.1
