--- a/app/package.json
+++ b/app/package.json
@@ -31,7 +31,8 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "react-tabs": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
