--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,9 @@
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.2",
-    "react-tabs": "^6.0.1"
+    "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -44,6 +46,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-responsive": "^8.0.5",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
