--- a/app/package.json
+++ b/app/package.json
@@ -35,7 +35,8 @@
     "react-router-dom": "^6.8.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "use-count-up": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
