--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,7 @@
     "emotion-rgba": "^0.0.11",
     "graphql": "^16.6.0",
     "jotai": "^2.0.3",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -42,7 +42,7 @@
     "@babel/core": "^7.21.0",
     "@graphql-codegen/cli": "^3.2.2",
     "@graphql-codegen/client-preset": "^2.1.1",
-    "@types/lodash": "^4.14.191",
+    "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
