--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.8.0",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "apexcharts": "^3.37.2",
@@ -30,10 +31,10 @@
     "react-error-boundary": "^4.0.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.9",
-    "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.2",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.1",
     "slick-carousel": "^1.8.1",
     "use-count-up": "^3.0.1"
