--- a/app/package.json
+++ b/app/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.4",
+    "rollup-plugin-visualizer": "^5.9.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
