--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -2,7 +2,7 @@
   "root": true,
   "env": {
     "browser": true,
-    "esnext": true
+    "es6": true
   },
   "extends": [
     "eslint:recommended",
@@ -16,14 +16,18 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "react-hooks",
-    "@typescript-eslint"
-  ],
+  "plugins": ["react", "react-hooks", "@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "react/jsx-no-useless-fragment": "off",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "error",
+    "react/jsx-boolean-value": "warn",
+    "@typescript-eslint/no-unused-vars": "warn"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
