--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,8 @@
     "emotion-rgba": "^0.0.11",
     "graphql": "^16.6.0",
     "jotai": "^2.0.3",
+    "jotai-utils": "^0.0.0",
+    "ky": "^0.33.3",
     "lodash-es": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
@@ -34,6 +36,7 @@
     "react-error-boundary": "^4.0.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.9",
+    "react-jwt": "^1.1.8",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.2",
     "react-slick": "^0.29.0",
