--- a/app/package.json
+++ b/app/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-storybook": "^0.6.12",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
+    "react-docgen-typescript-plugin": "^1.0.5",
     "rollup-plugin-visualizer": "^5.9.2",
     "storybook": "^7.0.22",
     "typescript": "^4.9.5",
