--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.8",
     "emotion-rgba": "^0.0.11",
     "graphql": "^16.6.0",
+    "history": "^5.3.0",
     "jotai": "^2.2.0",
     "jotai-utils": "^0.0.0",
     "ky": "^0.33.3",
