✨ feat: env dev & prod 분리에 따른 변경

--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "compile": "NODE_TLS_REJECT_UNAUTHORIZED=0 DOTENV_CONFIG_PATH=../env/.env graphql-codegen -r dotenv/config",
-    "watch": "DOTENV_CONFIG_PATH=../env/.env graphql-codegen -r dotenv/config -w",
+    "compile": "DOTENV_CONFIG_PATH=../env/.env.development graphql-codegen -r dotenv/config",
+    "watch": "DOTENV_CONFIG_PATH=../env/.env.development graphql-codegen -r dotenv/config -w",
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix",
     "storybook": "storybook dev -p 6006",
