--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,7 +14,7 @@ services:
       - '8080:8080'
     entrypoint: sh /tmp/entry.prod.sh
     env_file:
-      - env/.env
+      - env/.env.production
 
 volumes:
   frontend-app:
