--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:dev": "tsc && vite build -m development",
     "preview": "vite preview",
     "compile": "DOTENV_CONFIG_PATH=../env/.env.development graphql-codegen -r dotenv/config",
     "watch": "DOTENV_CONFIG_PATH=../env/.env.development graphql-codegen -r dotenv/config -w",
