--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "env"]
-	path = env
-	url = git@github.com:42Statistics/42Stat-Frontend-env.git
+[submodule "app/env"]
+	path = app/env
+	url = https://github.com/42Statistics/42Stat-Frontend-env.git
