--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,8 @@
     "build": "tsc && vite build",
     "build:dev": "tsc && vite build -m development",
     "preview": "vite preview",
-    "compile": "DOTENV_CONFIG_PATH=../env/.env.development graphql-codegen -r dotenv/config",
-    "watch": "DOTENV_CONFIG_PATH=../env/.env.development graphql-codegen -r dotenv/config -w",
+    "compile": "DOTENV_CONFIG_PATH=./env/.env.development graphql-codegen -r dotenv/config",
+    "watch": "DOTENV_CONFIG_PATH=./env/.env.development graphql-codegen -r dotenv/config -w",
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix",
     "storybook": "storybook dev -p 6006",
