--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "apexcharts": "^3.41.0",
     "dayjs": "^1.11.8",
     "emotion-rgba": "^0.0.11",
+    "facepaint": "^1.2.1",
     "graphql": "^16.6.0",
     "history": "^5.3.0",
     "jotai": "^2.2.0",
@@ -60,6 +61,7 @@
     "@storybook/react": "^7.0.22",
     "@storybook/react-vite": "^7.0.22",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/facepaint": "^1.2.2",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.16.17",
     "@types/react": "^18.2.12",
