➕ chore: ky -> axios

--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@react-oauth/google": "^0.8.1",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "apexcharts": "^3.41.0",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "emotion-rgba": "^0.0.11",
     "facepaint": "^1.2.1",
@@ -32,7 +33,6 @@
     "history": "^5.3.0",
     "jotai": "^2.2.0",
     "jotai-utils": "^0.0.0",
-    "ky": "^0.33.3",
     "lodash-es": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
