➕ chore: remove @react-oauth/google

--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,6 @@
     "@emotion/styled": "^11.11.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@react-icons/all-files": "^4.1.0",
-    "@react-oauth/google": "^0.8.1",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "apexcharts": "^3.41.0",
     "axios": "^1.4.0",
@@ -60,6 +59,7 @@
     "@storybook/react-vite": "^7.0.22",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/facepaint": "^1.2.2",
+    "@types/google.accounts": "^0.0.7",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.16.17",
     "@types/react": "^18.2.12",
