--- a/app/package.json
+++ b/app/package.json
@@ -44,7 +44,8 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.12.1",
     "react-spinners": "^0.13.8",
-    "use-count-up": "^3.0.1"
+    "use-count-up": "^3.0.1",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
