--- a/app/package.json
+++ b/app/package.json
@@ -42,7 +42,8 @@
     "react-router-dom": "^6.12.1",
     "react-spinners": "^0.13.8",
     "use-count-up": "^3.0.1",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
