--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@types/react-slick": "^0.23.10",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "apexcharts": "^3.41.0",
     "dayjs": "^1.11.8",
@@ -38,7 +39,9 @@
     "react-hook-form": "^7.44.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.12.1",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "slick-carousel": "^1.8.1",
     "use-count-up": "^3.0.1",
     "usehooks-ts": "^2.9.1",
     "vite-plugin-svgr": "^3.2.0"
