--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "apexcharts": "^3.41.0",
     "dayjs": "^1.11.8",
+    "detect-browser": "^5.3.0",
     "emotion-rgba": "^0.0.11",
     "facepaint": "^1.2.1",
     "graphql": "^16.6.0",
