--- a/.github/workflows/s3-ci.yml
+++ b/.github/workflows/s3-ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Upload build result to s3 bucket (production ver.)
 
 on:
   release:
@@ -12,6 +12,8 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       DEFAULT_BUCKET_REGION: ${{ secrets.DEFAULT_BUCKET_REGION }}
       S3_BUCKET: ${{ secrets.S3_BUCKET }}
+      WORKING_DIRECTORY: ./app
+
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
@@ -19,15 +21,16 @@ jobs:
           submodules: true
           token: ${{ secrets.READ_PRIVATE_SUBMODULE_TOKEN }}
 
-      - name: Waiting build using Docker Compose
-        run: | 
-          docker-compose -f docker-compose.prod.yml up -d
-          docker-compose -f docker-compose.prod.yml logs -f
+      - name: Pnpm setup
+        uses: pnpm/action-setup@v2
 
-      - name: Copy built files to ./dist
-        run: |
-          mkdir -p ./dist
-          cp -r ./app/dist/* ./dist/
+      - name: Install dependencies
+        run: pnpm i
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+
+      - name: Build
+        run: pnpm run build
+        working-directory: ${{ env.WORKING_DIRECTORY }}
 
       - name: Install AWS
         run: |
@@ -36,5 +39,4 @@ jobs:
 
       - name: Upload to S3
         run: |
-          aws s3 sync ./dist s3://$S3_BUCKET --region $DEFAULT_BUCKET_REGION
-
+          aws s3 sync ./app/dist s3://$S3_BUCKET --region $DEFAULT_BUCKET_REGION
