--- a/.github/workflows/s3-ci-dev.yml
+++ b/.github/workflows/s3-ci-dev.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
         with:
+          ref: develop
           submodules: true
           token: ${{ secrets.READ_PRIVATE_SUBMODULE_TOKEN }}
 
@@ -29,7 +30,7 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
 
       - name: Build
-        run: pnpm run build
+        run: pnpm run build:dev
         working-directory: ${{ env.WORKING_DIRECTORY }}
 
       - name: Install AWS
