--- a/.github/workflows/s3-ci.yml
+++ b/.github/workflows/s3-ci.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
         with:
+          ref: main
           submodules: true
           token: ${{ secrets.READ_PRIVATE_SUBMODULE_TOKEN }}
 
