--- a/app/package.json
+++ b/app/package.json
@@ -77,6 +77,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
     "prettier": "^2.8.8",
     "react-docgen-typescript-plugin": "^1.0.5",
     "storybook": "^7.0.22",
