--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -8,28 +8,19 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended",
     "plugin:storybook/recommended",
-    "plugin:storybook/recommended"
+    "prettier"
   ],
-  "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "react-hooks",
-    "@typescript-eslint"
-  ],
+  "plugins": ["react", "react-hooks", "@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "react/jsx-no-useless-fragment": "off",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "error",
-    "react/jsx-boolean-value": "warn",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "react-hooks/exhaustive-deps": "error"
   },
   "settings": {
     "react": {
