fix(husky): 확장자 js, jsx, ts, tsx로 변경

--- a/app/package.json
+++ b/app/package.json
@@ -87,7 +87,7 @@
     "vite": "^4.3.9"
   },
   "lint-staged": {
-    "*": [
+    "*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "eslint --fix"
     ]
