build(scripts): development로 혼용되었던 localhost 모드 분리

--- a/app/package.json
+++ b/app/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.3",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite -m localhost",
     "build": "tsc && vite build",
     "build:dev": "tsc && vite build -m development",
     "preview": "vite preview",
-    "compile": "DOTENV_CONFIG_PATH=./env/.env.development graphql-codegen -r dotenv/config",
-    "watch": "DOTENV_CONFIG_PATH=./env/.env.development graphql-codegen -r dotenv/config -w",
+    "compile": "DOTENV_CONFIG_PATH=./env/.env.localhost graphql-codegen -r dotenv/config",
+    "watch": "DOTENV_CONFIG_PATH=./env/.env.localhost graphql-codegen -r dotenv/config -w",
     "format": "prettier . --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
