ci: prod 배포 조건 published로 변경

--- a/.github/workflows/s3-ci.yml
+++ b/.github/workflows/s3-ci.yml
@@ -2,7 +2,7 @@ name: Upload build result to s3 bucket (production ver.)
 
 on:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
   build:
