--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -6,10 +6,6 @@ on:
       - develop
     types: [opened, synchronize]
 
-defaults:
-  run:
-    working-directory: ./app
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,23 +14,10 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
         with:
-          ref: develop
           submodules: true
           token: ${{ secrets.READ_PRIVATE_SUBMODULE_TOKEN }}
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 19
-
-      - name: Install Pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: false
-
-      - name: Install dependencies
-        run: pnpm i
-
-      - name: Build
-        run: pnpm run build:dev
+      - name: Waiting build using Docker Compose
+        run: |
+          docker compose -f docker-compose.dev.yml up -d
+          docker compose -f docker-compose.dev.yml logs -f
