--- a/.github/workflows/s3-ci-dev.yml
+++ b/.github/workflows/s3-ci-dev.yml
@@ -12,7 +12,6 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       DEFAULT_BUCKET_REGION: ${{ secrets.DEFAULT_BUCKET_REGION }}
       S3_BUCKET: ${{ secrets.DEV_S3_BUCKET }}
-      WORKING_DIRECTORY: ./app
 
     steps:
       - name: Checkout source code
@@ -22,24 +21,15 @@ jobs:
           submodules: true
           token: ${{ secrets.READ_PRIVATE_SUBMODULE_TOKEN }}
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 19
+      - name: Waiting build using Docker Compose
+        run: |
+          docker compose -f docker-compose.dev.yml up -d
+          docker compose -f docker-compose.dev.yml logs -f
 
-      - name: Install Pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: false
-
-      - name: Install dependencies
-        run: pnpm i
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-
-      - name: Build
-        run: pnpm run build:dev
-        working-directory: ${{ env.WORKING_DIRECTORY }}
+      - name: Copy built files to ./dist
+        run: |
+          mkdir -p ./dist
+          cp -r ./app/dist/* ./dist/
 
       - name: Install AWS
         run: |
