--- a/.github/workflows/s3-ci.yml
+++ b/.github/workflows/s3-ci.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Upload to S3
         run: |
           aws s3 sync ./app/dist s3://$S3_BUCKET --region $DEFAULT_BUCKET_REGION --delete --exclude "cdn/*" --exclude "fonts/*"
-          aws s3 cp --cache-control 's-maxage=31536000, max-age=0' index.html s3://$S3_BUCKET
+          aws s3 cp --cache-control 's-maxage=31536000, max-age=0' index.html s3://$S3_BUCKET --region $DEFAULT_BUCKET_REGION
 
       - name: Invalidate CloudFront
         run: |
