--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "@types/react-slick": "^0.23.10",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "apexcharts": "^3.41.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
     "detect-browser": "^5.3.0",
     "emotion-rgba": "^0.0.11",
