--- a/.github/workflows/s3-ci-dev.yml
+++ b/.github/workflows/s3-ci-dev.yml
@@ -42,6 +42,6 @@ jobs:
           aws s3 sync ./app/dist s3://$S3_BUCKET --region $DEFAULT_BUCKET_REGION --delete --exclude "cdn/*" --exclude "fonts/*"
           aws s3 cp --cache-control 'max-age=300, stale-if-error=86400' ./app/dist/index.html s3://$S3_BUCKET --region $DEFAULT_BUCKET_REGION
 
-      - name: Invalidate CloudFront
-        run: |
-          aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/index.html"
+      # - name: Invalidate CloudFront
+      #   run: |
+      #     aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/index.html"
