--- a/app/package.json
+++ b/app/package.json
@@ -77,6 +77,7 @@
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
