--- a/app/package.json
+++ b/app/package.json
@@ -18,14 +18,14 @@
     "prepare": "cd .. && chmod ug+x .husky/* && husky install"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.15",
+    "@apollo/client": "^3.13.8",
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@types/react-slick": "^0.23.10",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
-    "apexcharts": "^3.41.0",
+    "apexcharts": "3.41.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
     "detect-browser": "^5.3.0",
@@ -36,7 +36,7 @@
     "lodash-es": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
+    "react-apexcharts": "1.4.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-helmet-async": "^1.3.0",
@@ -72,7 +72,6 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "@vitejs/plugin-react": "^3.1.0",
-    "client": "link:@types/apollo/client",
     "dotenv": "^16.1.4",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^8.8.0",
@@ -86,7 +85,7 @@
     "prettier": "^3.0.2",
     "react-docgen-typescript-plugin": "^1.0.5",
     "storybook": "^7.0.22",
-    "typescript": "^5.3.2",
+    "typescript": "^5.8.3",
     "vite": "^4.3.9"
   },
   "lint-staged": {
